# EkoMurojat

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  terminal.sh
common/: admin.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py
complaints/: admin.py  forms.py  models.py  urls.py  views.py
complaints/migrations/: 0001_initial.py  0002_initial.py  0003_alter_complaint_priority.py  0004_alter_complaint_priority.py
config/: settings.py  urls.py
static/css/: style.css  styles.css
templates/: base.html  check_code.html  dashboard.html  home.html  login.html  signup.html  user_stats.html
templates/complaints/: admin_complaint_detail.html  admin_complaint_list.html  admin_complaint_update.html  admin_dashboard.html  admin_organization_confirm_delete.html  admin_organization_form.html  admin_organization_list.html  admin_priority_management.html  admin_user_confirm_delete.html  admin_user_form.html  admin_user_list.html  moderator_complaint_detail.html  moderator_complaint_list.html  moderator_complaint_update.html  moderator_dashboard.html  user_complaint_confirm_delete.html  user_complaint_create.html  user_complaint_detail.html  user_complaint_list.html  user_dashboard.html  user_profile.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_customuser_user_image_alter_customuser_username.py  0004_alter_customuser_username.py  0005_alter_customuser_username.py  0006_alter_customuser_username.py  (+1 more)
